# app/Model/Models.php
@@ -6,5 +6,9 @@ use Illuminate\Database\Eloquent\Model;
 
 class Models extends Model
 {
-    //
+    public function brands()
+    {
+        return $this->belongsTo(Brands::class, 'brand_id', 'id');
+    }
+
 }
